--- a/public/items/拓扑图打点工具/style/index.css
+++ b/public/items/拓扑图打点工具/style/index.css
@@ -34,3 +34,30 @@
     position: absolute;
 
 }
+
+ .avatar-uploader .el-upload {
+    border: 1px dashed #d9d9d9;
+    border-radius: 6px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+  .avatar-uploader .el-upload:hover {
+    border-color: #409EFF;
+  }
+  .avatar-uploader-icon {
+    font-size: 28px;
+    color: #8c939d;
+    width: 178px;
+    height: 178px;
+    line-height: 178px;
+    text-align: center;
+  }
+  .avatar {
+    width: 78px;
+    height: 78px;
+    border: 5px solid transparent;
+  }
+  .active-img{
+    border: 5px solid #ff0000;
+  }
