--- a/public/items/旋转组件/libs/index.css
+++ b/public/items/旋转组件/libs/index.css
@@ -7,17 +7,20 @@ html {
 
 body {
 	margin: 0;
-	background: #ffffff;
+	background: #1e1f22;
 	width: 100%;
 	height: 100%;
 }
-
+#app{
+	position: relative; 
+}
 div#canvas-frame {
 	width: 100%;
 	height: 100%;
-	background: #1e1f22;
+	/* background: #1e1f22; */
 	margin: 0;
 	position: relative;
+	/* z-index: -1; */
 }
 
 .btns {
@@ -63,15 +66,28 @@ div#canvas-frame {
 }
 .matitems {
 	display: inline-block;
-	width: 250px; 
+	width: 250px;
 }
 
-.itmes{
+.itmes {
 	position: absolute;
 	right: 10px;
-	bottom:60px;
-	color:#fff
+	bottom: 60px;
+	color: #fff;
 }
-.itmes span{
+.itmes span {
 	cursor: pointer;
+}
+.child-span {
+	width: 95px;
+	display: inline-block;
+	font-size: 13px;
+}
+
+.backd{
+	position: absolute;
+	left:50%;
+	top:50%;
+	transform: translate(-50%, -50%);
+	z-index: -1;
 }
